feat: 添加常用的 dom 操作方法

--- a/api/pug/properties/chapters.pug
+++ b/api/pug/properties/chapters.pug
@@ -25,7 +25,7 @@ section.section
             this.chapters = []
             this.closed = false
             this.active = 0
-            this.offsetTop = 0
+            this.getOffsetTop = 0
             this.$active = null
             this.timer = null
             this.playing = false
