--- a/api/pug/attributes/removeClass.pug
+++ b/api/pug/attributes/removeClass.pug
@@ -1,26 +1,44 @@
 section.section
   header.section__header
-    h3.section__h3 destroyed
+    h3.section__h3 removeClass(el, className)
   div.section__content
-    table.section__table
-      thead.section__thead
-        tr.section__tr
-          th.section__th 事件名称
-          th.section__th 说明
-          th.section__th 回调参数
-      tbody.section__tbody
-        tr.section__tr
-          td.section__td destroyed
-          td.section__td Outline 实例销毁后事件，在调用 Outline 对象的实例 destroy() 方法后会触发。
-          td.section__td --
+    p removeClass() 方法用来移除 DOM 元素中的 className 的样式；
+    h4.section__h4 Parameters
+    h5.section__h4 el
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd HTMLElement
+    p （必须）HTMLElement 参数指定需要移除 class 样式的 DOM 元素；
+    h5.section__h4 className
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd String
+    p （必须）className 参数指定要移除的 class 样式名称。
     h4.section__h4 Usage
     pre.section__pre
       code.section__code.
-        const outline = new Outline(Outline.DEFAULTS)
+        &lt;ul id="list" class="list"&gt;
+            &lt;li class="item active"&gt;Home&lt;/li&gt;
+            &lt;li class="item"&gt;Blog&lt;/li&gt;
+            &lt;li class="item"&gt;Projects&lt;/li&gt;
+            &lt;li class="item"&gt;About&lt;/li&gt;
+        &lt;/ul&gt;
 
-        outline.$on('beforeDestroy', function() {
-          // this 上下文就是 outline 实例
-          console.log('this', this)
-        })
+        // 引入 DOM 模块（中的所有工具方法）
+        import DOM from '@yaohaixiao/dom.js/dom
+        // 引用 addClass 单个方法
+        import removeClass from '@yaohaixiao/dom.js/removeClass'
 
-        outline.destroy()
+        const $list = DOM.byId('#list')
+
+        // 添加 class 样式
+        DOM.addClass($list, 'nav')
+        DOM.addClass($list, 'primary')
+
+        // 判断是否存在 class 样式
+        DOM.removeClass($list, 'nav') => true
+        removeClass($list, 'primary')
+
+        hasClass($list, 'list') => true
+        hasClass($list, 'nav') => false
+        hasClass($list, 'primary') => false
