--- a/api/pug/attributes/replaceClass.pug
+++ b/api/pug/attributes/replaceClass.pug
@@ -1,35 +1,47 @@
 section.section
   header.section__header
-    h3.section__h3 enterReading
+    h3.section__h3 replaceClass(el, oldCls, newCls)
   div.section__content
-    table.section__table
-      thead.section__thead
-        tr.section__tr
-          th.section__th 事件名称
-          th.section__th 说明
-          th.section__th 回调参数
-      tbody.section__tbody
-        tr.section__tr
-          td.section__td enterReading
-          td.section__td 配置了 print 参数，在进入阅读模式后会触发。
-          td.section__td --
+    p replaceClass() 方法用来替换 DOM 元素中的 className 的样式；
+    h4.section__h4 Parameters
+    h5.section__h4 el
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd HTMLElement
+    p （必须）HTMLElement 参数指定需要替换 class 样式的 DOM 元素；
+    h5.section__h4 className
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd String
+    p （必须）oldCls 要替换的 class 样式名称。
+    h5.section__h4 className
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd String
+    p （必须）newCls 用来替换的 class 样式名称。
     h4.section__h4 Usage
     pre.section__pre
       code.section__code.
-        const defaults = Outline.DEFAULTS
+        &lt;ul id="list" class="list"&gt;
+            &lt;li class="item active"&gt;Home&lt;/li&gt;
+            &lt;li class="item"&gt;Blog&lt;/li&gt;
+            &lt;li class="item"&gt;Projects&lt;/li&gt;
+            &lt;li class="item"&gt;About&lt;/li&gt;
+        &lt;/ul&gt;
 
-        // 需要配置 print 参数
-        defaults.print = {
-          element: '#article',
-          title: document.querySelector('.title')
-        }
+        // 引入 DOM 模块（中的所有工具方法）
+        import DOM from '@yaohaixiao/dom.js/dom
+        // 引用 addClass 单个方法
+        import replaceClass from '@yaohaixiao/dom.js/removeClass'
 
-        const outline = new Outline(Outline.DEFAULTS)
+        const $list = DOM.byId('#list')
 
-        outline.$on('enterReading', function() {
-          // this 上下文就是 outline 实例
-          console.log('this', this)
-        })
+        // 添加 class 样式
+        DOM.addClass($list, 'nav')
 
-        // 手动触发 enterReading 事件
-        outline.$emit('enterReading')
+        // 判断是否存在 class 样式
+        DOM.replaceClass($list, 'nav', 'main')
+
+        hasClass($list, 'list') => true
+        hasClass($list, 'nav') => false
+        hasClass($list, 'main') => true
