--- a/api/pug/attributes/toggleClass.pug
+++ b/api/pug/attributes/toggleClass.pug
@@ -1,18 +1,19 @@
 section.section
   header.section__header
-    h3.section__h3 exitReading
+    h3.section__h3 toggleClass(el, className)
   div.section__content
-    table.section__table
-      thead.section__thead
-        tr.section__tr
-          th.section__th 事件名称
-          th.section__th 说明
-          th.section__th 回调参数
-      tbody.section__tbody
-        tr.section__tr
-          td.section__td exitReading
-            td.section__td 配置了 print 参数，在离开阅读模式后会触发。
-            td.section__td --
+    p toggleClass() 方法用来切换（添加或删除） DOM 元素中的 className 的样式；
+    h4.section__h4 Parameters
+    h5.section__h4 el
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd HTMLElement
+    p （必须）HTMLElement 参数指定需要切换 class 样式的 DOM 元素；
+    h5.section__h4 className
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd String
+    p （必须）className 参数指定要切换的样式名称。
     h4.section__h4 Usage
     pre.section__pre
       code.section__code.
