--- a/api/pug/size/section.pug
+++ b/api/pug/size/section.pug
@@ -7,6 +7,7 @@ section.section
   include ./getDocumentHeight
   include ./getViewportHeight
   include ./getViewportWidth
+  include ./getElementSizes
   include ./innerHeight
   include ./innerWidth
   include ./outerHeight
