--- a/api/pug/attributes/getAttributes.pug
+++ b/api/pug/attributes/getAttributes.pug
@@ -1,16 +1,41 @@
 section.section
   header.section__header
-    h3.section__h3 getAttributes(el, attrs)
+    h3.section__h3 getAttributes(el, props)
   div.section__content
-
+    p getAttribute() 方法用来获取 DOM 元素的多个 DOM 属性值；
+    h4.section__h4 Parameters
+    h5.section__h4 el
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd HTMLElement
+    p （必须）HTMLElement 参数指定 DOM 元素；
+    h5.section__h4 className
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd Array
+    p （可选）props 参数指定要获取的属性名称的数组，不指定则获取全部 DOM 属性。
+    h5.section__h4 Returns
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd Any
+    p 返回查询的多属性的键/值对象。
     h4.section__h4 Usage
     pre.section__pre
       code.section__code.
-        const outline = new Outline(Outline.DEFAULTS)
+        &lt;ul id="list" class="list"&gt;
+            &lt;li class="item active"&gt;Home&lt;/li&gt;
+            &lt;li class="item"&gt;Blog&lt;/li&gt;
+            &lt;li class="item"&gt;Projects&lt;/li&gt;
+            &lt;li class="item"&gt;About&lt;/li&gt;
+        &lt;/ul&gt;
 
-        outline.$on('beforeDestroy', function() {
-          // this 上下文就是 outline 实例
-          console.log('this', this)
-        })
+        // 引入 DOM 模块（中的所有工具方法）
+        import DOM from '@yaohaixiao/dom.js/dom
+        // 引用 getAttributes 单个方法
+        import getAttributes from '@yaohaixiao/dom.js/getAttributes'
 
-        outline.destroy()
+        const $list = byId('#list')
+
+        DOM.getAttributes($list, ['id', 'class']) // -> { id: 'list', class: 'list' }
+        getAttributes($list) // -> { id: 'list', class: 'list' }
+        getAttributes($list, ['className']) // -> { className: 'list' }
