--- a/api/pug/attributes/setAttributes.pug
+++ b/api/pug/attributes/setAttributes.pug
@@ -2,15 +2,40 @@ section.section
   header.section__header
     h3.section__h3 setAttributes(el, attrs)
   div.section__content
-
+    p getAttributes() 方法用来给 DOM 元素一次设置多个 DOM 属性/值；
+    h4.section__h4 Parameters
+    h5.section__h4 el
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd HTMLElement
+    p （必须）HTMLElement 参数指定 DOM 元素；
+    h5.section__h4 attrs
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd Object
+    p （必须）attrs 参数指定要设置的属性键/值对象。
     h4.section__h4 Usage
     pre.section__pre
       code.section__code.
-        const outline = new Outline(Outline.DEFAULTS)
+        &lt;ul id="list" class="list"&gt;
+            &lt;li class="item active"&gt;Home&lt;/li&gt;
+            &lt;li class="item"&gt;Blog&lt;/li&gt;
+            &lt;li class="item"&gt;Projects&lt;/li&gt;
+            &lt;li class="item"&gt;About&lt;/li&gt;
+        &lt;/ul&gt;
 
-        outline.$on('beforeDestroy', function() {
-          // this 上下文就是 outline 实例
-          console.log('this', this)
+        // 引入 DOM 模块（中的所有工具方法）
+        import DOM from '@yaohaixiao/dom.js/dom
+        // 引用 setAttributes 单个方法
+        import setAttributes from '@yaohaixiao/dom.js/setAttributes'
+
+        const $list = byId('#list')
+
+        setAttributes($list, {
+          'aria-hidden': true,
+          'data-id': 'list',
+          style: 'height:30px;width:100%;'
         })
 
-        outline.destroy()
+        DOM.getAttribute($list, 'data-id') // -> 'list'
+
