docs: 更新 API 文档

--- a/api/pug/attributes/hasClass.pug
+++ b/api/pug/attributes/hasClass.pug
@@ -8,7 +8,7 @@ section.section
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd HTMLElement
-    p （必须）HTMLElement 参数指定需要检测 class 样式的 DOM 元素；
+    p （必须）HTMLElement 参数指定需要检测 class 样式的 DOM 元素。
     h5.section__h4 className
     dl.section__dl
       dt.section__dt Type：
