--- a/api/pug/attributes/section.pug
+++ b/api/pug/attributes/section.pug
@@ -14,6 +14,6 @@ section.section
   include ./setAttributes
   include ./removeAttribute
   include ./removeAttributes
-  include ./attr
+  include ./attrs
   include ./html
   include ./text
