--- a/api/pug/sibling/getNextSibling.pug
+++ b/api/pug/sibling/getNextSibling.pug
@@ -7,7 +7,7 @@ section.section
       dt.section__dt Type：
       dd.section__dd Object
     p 存储的是 Outline 对象当前使用中的配置选项：
-    p 说明：建议使用 attr(prop) 方法来获取属性，避免直接调用属性。
+    p 说明：建议使用 attrs(prop) 方法来获取属性，避免直接调用属性。
     pre.section__pre
       code.section__code.
         // 设置默认配置项
