--- a/api/pug/style/setStyle.pug
+++ b/api/pug/style/setStyle.pug
@@ -29,7 +29,7 @@ section.section
 
         const handler = function(attrs) {
           // this 上下文指向 outline 实例
-          this.attr()
+          this.attrs()
           console.log('attrs: ', attrs)
         }
 
