--- a/api/pug/attributes/addClass.pug
+++ b/api/pug/attributes/addClass.pug
@@ -2,18 +2,23 @@ section.section
   header.section__header
     h3.section__h3 addClass(el, className)
   div.section__content
-    p addClass() 方法用来给 DOM 元素添加 class 样式；
+    p addClass() 方法用来给 DOM 元素添加 class 样式。
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd HTMLElement
-    p （必须）HTMLElement 参数指定需要添加 class 样式的 DOM 元素；
+    p （必须）HTMLElement 参数指定需要添加 class 样式的 DOM 元素。
     h5.section__h4 className
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd String
     p （必须）className 参数指定要检测的 class 样式名称。
+    h5.section__h4 Returns
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd Boolean
+    p 如果 el 元素包含 className 的 class 样式，则返回 true，否则返回 false。
     h4.section__h4 Usage
     pre.section__pre
       code.section__code.
