--- a/api/pug/attributes/removeAttribute.pug
+++ b/api/pug/attributes/removeAttribute.pug
@@ -2,15 +2,41 @@ section.section
   header.section__header
     h3.section__h3 removeAttribute(el, attr)
   div.section__content
-
+    p removeAttribute() 方法用来移除 DOM 元素的 DOM 属性值。
+    h4.section__h4 Parameters
+    h5.section__h4 el
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd HTMLElement
+    p （必须）HTMLElement 参数指定 DOM 元素。
+    h5.section__h4 attr
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd String
+    p （必须）attr 参数指定属性名称。
     h4.section__h4 Usage
     pre.section__pre
       code.section__code.
-        const outline = new Outline(Outline.DEFAULTS)
+        &lt;ul id="list" class="list"&gt;
+            &lt;li class="item active"&gt;Home&lt;/li&gt;
+            &lt;li class="item"&gt;Blog&lt;/li&gt;
+            &lt;li class="item"&gt;Projects&lt;/li&gt;
+            &lt;li class="item"&gt;About&lt;/li&gt;
+        &lt;/ul&gt;
 
-        outline.$on('beforeDestroy', function() {
-          // this 上下文就是 outline 实例
-          console.log('this', this)
-        })
+        // 引入 DOM 模块（中的所有工具方法）
+        import DOM from '@yaohaixiao/dom.js/dom
+        // 引用 removeAttribute 单个方法
+        import removeAttribute from '@yaohaixiao/dom.js/removeAttribute'
 
-        outline.destroy()
+        const $list = byId('#list')
+
+        DOM.removeAttribute($list, 'id')
+        DOM.getAttribute($list, 'id') // -> null
+
+        // 可以一次性调整多个样式，性能更好
+        DOM.setAttribute($list, 'style', 'width:200px;height:30px;')
+        DOM.getAttribute($list, 'style') // -> 'width:200px;height:30px;'
+
+        removeAttribute($list, 'style')
+        DOM.getAttribute($list, 'style') // -> null
