--- a/api/pug/attributes/removeAttributes.pug
+++ b/api/pug/attributes/removeAttributes.pug
@@ -2,15 +2,36 @@ section.section
   header.section__header
     h3.section__h3 removeAttributes(el, attrs)
   div.section__content
-
+    p removeAttributes() 方法用来移除 DOM 元素（一个或）多个 DOM 属性。不设置 attrs，则移除 el 元素上的所有 DOM 属性。
+    h4.section__h4 Parameters
+    h5.section__h4 el
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd HTMLElement
+    p （必须）HTMLElement 参数指定 DOM 元素。
+    h5.section__h4 attrs
+    dl.section__dl
+      dt.section__dt Type：
+      dd.section__dd Object
+    p （可选）attrs 参数指定要移除的属性名称数组，不设置 attrs，则移除 el 元素上的所有 DOM 属性。
     h4.section__h4 Usage
     pre.section__pre
       code.section__code.
-        const outline = new Outline(Outline.DEFAULTS)
+         &lt;ul id="list" class="list"&gt;
+             &lt;li class="item active"&gt;Home&lt;/li&gt;
+             &lt;li class="item"&gt;Blog&lt;/li&gt;
+             &lt;li class="item"&gt;Projects&lt;/li&gt;
+             &lt;li class="item"&gt;About&lt;/li&gt;
+         &lt;/ul&gt;
 
-        outline.$on('beforeDestroy', function() {
-          // this 上下文就是 outline 实例
-          console.log('this', this)
-        })
+         // 引入 DOM 模块（中的所有工具方法）
+         import DOM from '@yaohaixiao/dom.js/dom
+         // 引用 removeAttributes 单个方法
+         import removeAttributes from '@yaohaixiao/dom.js/removeAttributes'
 
-        outline.destroy()
+         const $list = byId('#list')
+
+         // 效果相同 removeAttributes(el)
+         DOM.removeAttributes($list, ['id', 'class'])
+         DOM.getAttribute($list, 'id') // -> null
+         DOM.getAttribute($list, 'class') // -> null
