--- a/api/pug/attributes/setAttribute.pug
+++ b/api/pug/attributes/setAttribute.pug
@@ -2,13 +2,13 @@ section.section
   header.section__header
     h3.section__h3 setAttribute(el, attr, value)
   div.section__content
-    p getAttribute() 方法用来设置 DOM 元素的 DOM 属性值；
+    p getAttribute() 方法用来设置 DOM 元素的 DOM 属性值。
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd HTMLElement
-    p （必须）HTMLElement 参数指定 DOM 元素；
+    p （必须）HTMLElement 参数指定 DOM 元素。
     h5.section__h4 attr
     dl.section__dl
       dt.section__dt Type：
