--- a/api/pug/style/css.pug
+++ b/api/pug/style/css.pug
@@ -1,6 +1,6 @@
 section.section
   header.section__header
-    h3.section__h3 css(el, attr[, value])
+    h3.section__h3 css(el, attrs[, value])
   div.section__content
     h4.section__h4 Description
     p $emit()方法用来发布订阅主题信息。
