--- a/api/pug/style/getStyle.pug
+++ b/api/pug/style/getStyle.pug
@@ -1,6 +1,6 @@
 section.section
   header.section__header
-    h3.section__h3 getStyle(el, attr)
+    h3.section__h3 getStyle(el, attrs)
   div.section__content
     h4.section__h4 Description
     p $off() 用来取消订阅主题。
