--- a/api/pug/style/getStyles.pug
+++ b/api/pug/style/getStyles.pug
@@ -3,7 +3,7 @@ section.section
     h3.section__h3 getStyles(el, attrs)
   div.section__content
     h4.section__h4 Description
-    p attr() 方法用来设置或者获取初始化时配置的 attrs 信息的。
+    p attrs() 方法用来设置或者获取初始化时配置的 attrs 信息的。
     h4.section__h4 Parameters
     h5.section__h4 prop
     dl.section__dl
@@ -34,6 +34,6 @@ section.section
            title: 'Outline v2.0.0'
         })
 
-        outline.attr('title') // -> 'Outline v2.0.0'
-        outline.attr('title', '目录') // -> 设置 title 配置信息的值为 '目录'
-        outline.attr() // -> 返回完整配置参数 attrs 信息
+        outline.attrs('title') // -> 'Outline v2.0.0'
+        outline.attrs('title', '目录') // -> 设置 title 配置信息的值为 '目录'
+        outline.attrs() // -> 返回完整配置参数 attrs 信息
