--- a/api/pug/types/section.pug
+++ b/api/pug/types/section.pug
@@ -1,6 +1,6 @@
 section.section
   header.section__header
-    h2.section__title Types
+    h2.section__title Node Types
   div.section__content
     p dom.js 提供以下方法用于判断 DOM 元素的类型。
   include ./isCollection
