chore: 调整单测文件目录结构

--- a/api/pug/attributes/hasClass.pug
+++ b/api/pug/attributes/hasClass.pug
@@ -2,13 +2,16 @@ section.section
   header.section__header
     h3.section__h3 hasClass(el, className)
   div.section__content
-    p hasClass() 方法用来判断 DOM 元素是否包含指定 className 的样式；
+    p hasClass() 方法用来判断 DOM 元素是否包含指定 className 的样式。
+    dl.section__dl
+      dt.section__dt Category：
+      dd.section__dd Attributes
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd HTMLElement
-    p （必须）HTMLElement 参数指定需要检测 class 样式的 DOM 元素。
+    p （必须）el 参数指定需要检测 class 样式的 DOM 元素。
     h5.section__h4 className
     dl.section__dl
       dt.section__dt Type：
