--- a/api/pug/attributes/html.pug
+++ b/api/pug/attributes/html.pug
@@ -3,6 +3,9 @@ section.section
     h3.section__h3 html(el[, strHTML])
   div.section__content
     p html() 方法用来获取或者设置 DOM 元素的 innerHTML 属性值，或者通过 HTML 字符串，创建 DOM 元素。
+    dl.section__dl
+      dt.section__dt Category：
+      dd.section__dd Attributes
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
