--- a/api/pug/types/isDOM.pug
+++ b/api/pug/types/isDOM.pug
@@ -2,13 +2,16 @@ section.section
   header.section__header
     h3.section__h3 isDOM(el)
   div.section__content
-    p isDOM(val) 方法用来检测测试数据是否为 DOM 类型数据：DOM 节点，TextNode，NodeList 和 DocumentFragment）。
+    p isDOM() 方法用来检测测试数据是否为 DOM 类型数据：DOM 节点，TextNode，NodeList 和 DocumentFragment）。
+    dl.section__dl
+      dt.section__dt Category：
+      dd.section__dd Attributes
     h4.section__h4 Parameters
-    h5.section__h4 val
+    h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd Object
-    p （必须）val 待检测的数据。
+    p （必须）el 参数指定待检测的 DOM 元素。
     h4.section__h4 Returns
     dl.section__dl
       dt.section__dt Type：
