--- a/api/pug/types/isElement.pug
+++ b/api/pug/types/isElement.pug
@@ -2,16 +2,19 @@ section.section
   header.section__header
     h3.section__h3 isElement(el)
   div.section__content
-    p isElement(val) 方法用来检测测试数据是否为 HTMLElement (元素节点)类型。
+    p isElement() 方法用来检测测试数据是否为 HTMLElement (元素节点)类型。
+    dl.section__dl
+      dt.section__dt Category：
+      dd.section__dd Attributes
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Lang
     h4.section__h4 Parameters
-    h5.section__h4 val
+    h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd Any
-    p （必须）val 待检测的数据。
+    p （必须）el 参数指定待检测的 DOM 元素。
     h4.section__h4 Returns
     dl.section__dl
       dt.section__dt Type：
