--- a/api/pug/types/isFragment.pug
+++ b/api/pug/types/isFragment.pug
@@ -2,13 +2,12 @@ section.section
   header.section__header
     h3.section__h3 isFragment(el)
   div.section__content
-    h4.section__h4 Description
-    p isFragment(val) 方法用来检测测试数据是否为 DocumentFragment 文档碎片。
+    p isFragment() 方法用来检测测试数据是否为 DocumentFragment 文档碎片。
     dl.section__dl
-      dt.section__dt Since：
-      dd.section__dd 0.6.0
+      dt.section__dt Category：
+      dd.section__dd Attributes
     h4.section__h4 Parameters
-    h5.section__h4 val
+    h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd Any
