--- a/api/pug/attributes/addClass.pug
+++ b/api/pug/attributes/addClass.pug
@@ -3,12 +3,15 @@ section.section
     h3.section__h3 addClass(el, className)
   div.section__content
     p addClass() 方法用来给 DOM 元素添加 class 样式。
+    dl.section__dl
+      dt.section__dt Category：
+      dd.section__dd Attributes
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd HTMLElement
-    p （必须）HTMLElement 参数指定需要添加 class 样式的 DOM 元素。
+    p （必须）el 参数指定需要添加 class 样式的 DOM 元素。
     h5.section__h4 className
     dl.section__dl
       dt.section__dt Type：
