--- a/api/pug/attributes/attrs.pug
+++ b/api/pug/attributes/attrs.pug
@@ -3,12 +3,15 @@ section.section
     h3.section__h3 attrs(el[, attr, value])
   div.section__content
     p attrs() 方法用来设置或者获取 DOM 元素的（一个或多个） DOM 属性值。
+    dl.section__dl
+      dt.section__dt Category：
+      dd.section__dd Attributes
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd HTMLElement
-    p （必须）HTMLElement 参数指定 DOM 元素。
+    p （必须）el 参数指定 DOM 元素。
     h5.section__h4 attrs
     dl.section__dl
       dt.section__dt Type：
