--- a/api/pug/attributes/removeAttribute.pug
+++ b/api/pug/attributes/removeAttribute.pug
@@ -3,12 +3,15 @@ section.section
     h3.section__h3 removeAttribute(el, attr)
   div.section__content
     p removeAttribute() 方法用来移除 DOM 元素的 DOM 属性值。
+    dl.section__dl
+      dt.section__dt Category：
+      dd.section__dd Attributes
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd HTMLElement
-    p （必须）HTMLElement 参数指定 DOM 元素。
+    p （必须）el 参数指定 DOM 元素。
     h5.section__h4 attr
     dl.section__dl
       dt.section__dt Type：
