--- a/api/pug/attributes/removeAttributes.pug
+++ b/api/pug/attributes/removeAttributes.pug
@@ -3,12 +3,15 @@ section.section
     h3.section__h3 removeAttributes(el, attrs)
   div.section__content
     p removeAttributes() 方法用来移除 DOM 元素（一个或）多个 DOM 属性。不设置 attrs，则移除 el 元素上的所有 DOM 属性。
+    dl.section__dl
+      dt.section__dt Category：
+      dd.section__dd Attributes
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd HTMLElement
-    p （必须）HTMLElement 参数指定 DOM 元素。
+    p （必须）el 参数指定 DOM 元素。
     h5.section__h4 attrs
     dl.section__dl
       dt.section__dt Type：
