--- a/api/pug/types/isCollection.pug
+++ b/api/pug/types/isCollection.pug
@@ -2,14 +2,16 @@ section.section
   header.section__header
     h3.section__h3 isCollection(el)
   div.section__content
-    h4.section__h4 Description
-    p isCollection(val) 方法用来检测测试数据是否为 HTMLNodeList (元素集合)类型。
+    p isCollection() 方法用来检测测试数据是否为 HTMLNodeList (元素集合)类型。
+    dl.section__dl
+      dt.section__dt Category：
+      dd.section__dd Attributes
     h4.section__h4 Parameters
-    h5.section__h4 val
+    h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd Any
-    p （必须）val 待检测的数据。
+    p （必须）el 参数指定待检测的 DOM 元素。
     h4.section__h4 Returns
     dl.section__dl
       dt.section__dt Type：
