--- a/api/pug/style/getStyles.pug
+++ b/api/pug/style/getStyles.pug
@@ -3,7 +3,7 @@ section.section
     h3.section__h3 getStyles(el, attrs)
   div.section__content
     h4.section__h4 Description
-    p attrs() 方法用来设置或者获取初始化时配置的 attrs 信息的。
+    p getStyles() 方法用来设置或者获取初始化时配置的 attrs 信息的。
     h4.section__h4 Parameters
     h5.section__h4 prop
     dl.section__dl
