--- a/api/pug/style/getProperty.pug
+++ b/api/pug/style/getProperty.pug
@@ -2,42 +2,36 @@ section.section
   header.section__header
     h3.section__h3 getProperty(prop)
   div.section__content
-    h4.section__h4 Description
-    p $off() 用来取消订阅主题。
+    p getProperty() 用来获取 CSS 变量（属性）值。
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Core
+      dd.section__dd Style
     h4.section__h4 Parameters
-    h5.section__h4 topic
+    h5.section__h4 prop
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd String
-    p （必须）主题名称。
-    h5.section__h4 token
-    dl.section__dl
-      dt.section__dt Type：
-      dd.section__dd Function | String
-    p （可选）订阅主题的处理器函数或者唯一 Id 值。
-    ul
-      li 为传递 token 参数：取消指定 topic 的订阅；
-      li 传递 token 参数：仅删除 topic 订阅信息中与 token 对应的事件处理器
+    p （必须）CSS 属性名称。
     h4.section__h4 Returns
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd Outline
-    p Outline 对象，以便实现链式调用。
+      dd.section__dd String
+    p 返回一个 DOMString ，其中包含请求的 CSS 属性的值。
     pre.section__pre
       code.section__code.
-        const outline = new Outline(Outline.DEFAULTS)
+        &lt;style&gt;
+          :root {
+            --outline-zIndex: 2000;
+            --outline-sticky-height: 100%;
+            --outline-chapters-width: 100%;
+          }
+        &lt;/style&gt;
 
-        const handler = (msg) => {
-          console.log('handler:', msg)
-        }
+        // 引入 DOM 模块（中的所有工具方法）
+        import DOM from '@yaohaixiao/dom.js/dom
+        // 引用 getProperty 单个方法
+        import getProperty from '@yaohaixiao/dom.js/getProperty'
 
-        outline.$on('created')
-
-        // 取消订阅 author 主题
-        outline.$off('created')
-
-        // 不会有任何反应，因为已经取消订阅了
-        outline.$emit('created')
+        DOM.getProperty('--outline-zIndex') // => '2000'
+        getProperty('--outline-sticky-height') // => '100%'
+        getProperty('--outline-chapters-width') // => '100%'
