--- a/api/pug/style/getStyle.pug
+++ b/api/pug/style/getStyle.pug
@@ -1,43 +1,48 @@
 section.section
   header.section__header
-    h3.section__h3 getStyle(el, attrs)
+    h3.section__h3 getStyle(el, attr)
   div.section__content
     h4.section__h4 Description
-    p $off() 用来取消订阅主题。
+    p getStyle() 用来获取 DOM 元素的某个 CSS 样式值。
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Core
+      dd.section__dd Style
     h4.section__h4 Parameters
-    h5.section__h4 topic
+    h5.section__h4 el
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd String
-    p （必须）主题名称。
+      dd.section__dd HTMLElement
+    p （必须）el 参数指定 DOM 元素。
     h5.section__h4 token
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd Function | String
-    p （可选）订阅主题的处理器函数或者唯一 Id 值。
-    ul
-      li 为传递 token 参数：取消指定 topic 的订阅；
-      li 传递 token 参数：仅删除 topic 订阅信息中与 token 对应的事件处理器
+      dd.section__dd String
+    p （必须）指定 CSS 属性名称。
     h4.section__h4 Returns
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd Outline
-    p Outline 对象，以便实现链式调用。
+      dd.section__dd String
+    p 返回指定的 attr 的属性值。
     pre.section__pre
       code.section__code.
-        const outline = new Outline(Outline.DEFAULTS)
+        &lt;ul id="list" class="list"&gt;
+            &lt;li class="item active"&gt;Home&lt;/li&gt;
+            &lt;li class="item"&gt;Blog&lt;/li&gt;
+            &lt;li class="item"&gt;Projects&lt;/li&gt;
+            &lt;li class="item"&gt;About&lt;/li&gt;
+        &lt;/ul&gt;
 
-        const handler = (msg) => {
-          console.log('handler:', msg)
-        }
+        // 引入 DOM 模块（中的所有工具方法）
+        import DOM from '@yaohaixiao/dom.js/dom
+        // 引用 setStyle 单个方法
+        import setStyle from '@yaohaixiao/dom.js/setStyle'
 
-        outline.$on('created')
+        const $list = DOM.byId('#list')
 
-        // 取消订阅 author 主题
-        outline.$off('created')
+        DOM.setStyle($list, 'display', 'none')
+        DOM.setStyle($list, 'display', 'block')
 
-        // 不会有任何反应，因为已经取消订阅了
-        outline.$emit('created')
+        setStyle($list, 'background-color', '#f2f2f2')
+
+        DOM.getStyle($list, 'background-color') // -> '#f2f2f2'
+        getStyle($list, 'display') // -> 'block'
