--- a/api/pug/style/setProperty.pug
+++ b/api/pug/style/setProperty.pug
@@ -2,42 +2,39 @@ section.section
   header.section__header
     h3.section__h3 setProperty(prop, value)
   div.section__content
-    h4.section__h4 Description
-    p $off() 用来取消订阅主题。
+    p setProperty() 用来为一个声明了 CSS 样式的对象设置一个新的值。
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Core
+      dd.section__dd Style
     h4.section__h4 Parameters
-    h5.section__h4 topic
+    h5.section__h4 prop
     dl.section__dl
       dt.section__dt Type：
       dd.section__dd String
-    p （必须）主题名称。
-    h5.section__h4 token
+    p （必须）CSS 属性名称。
+    h5.section__h4 value
     dl.section__dl
       dt.section__dt Type：
-      dd.section__dd Function | String
-    p （可选）订阅主题的处理器函数或者唯一 Id 值。
-    ul
-      li 为传递 token 参数：取消指定 topic 的订阅；
-      li 传递 token 参数：仅删除 topic 订阅信息中与 token 对应的事件处理器
-    h4.section__h4 Returns
-    dl.section__dl
-      dt.section__dt Type：
-      dd.section__dd Outline
-    p Outline 对象，以便实现链式调用。
+      dd.section__dd String
+    p （必须）CSS 属性值。
     pre.section__pre
       code.section__code.
-        const outline = new Outline(Outline.DEFAULTS)
+        &lt;style&gt;
+          :root {
+            --outline - zIndex: 2000;
+          }
+        &lt;/style&gt;
 
-        const handler = (msg) => {
-          console.log('handler:', msg)
-        }
+        // 引入 DOM 模块（中的所有工具方法）
+        import DOM from '@yaohaixiao/dom.js/dom
+        // 引用 setProperty 单个方法
+        import setProperty from '@yaohaixiao/dom.js/setProperty'
 
-        outline.$on('created')
+        // 设置属性
+        DOM.setProperty('--outline-sticky-height', '100%')
+        setProperty('--outline-chapters-width', '100%')
 
-        // 取消订阅 author 主题
-        outline.$off('created')
-
-        // 不会有任何反应，因为已经取消订阅了
-        outline.$emit('created')
+        // 获取属性值
+        DOM.getProperty('--outline-zIndex') // => '2000'
+        DOM.getProperty('--outline-sticky-height') // => '100%'
+        DOM.getProperty('--outline-chapters-width') // => '100%'
