docs: update api docs

--- a/api/pug/types/section.pug
+++ b/api/pug/types/section.pug
@@ -2,7 +2,7 @@ section.section
   header.section__header
     h2.section__title Node Type Detection
   div.section__content
-    p dom.js 提供以下方法用于判断 DOM 元素的类型。
+    p dom.js 提供以下方法用于检测 DOM 元素的 Node Type 类型。
   include ./isCollection
   include ./isDOM
   include ./isElement
