--- a/api/pug/style/getStyles.pug
+++ b/api/pug/style/getStyles.pug
@@ -2,7 +2,9 @@ section.section
   header.section__header
     h3.section__h3 getStyles(el, attrs)
   div.section__content
-    h4.section__h4 Description
+    dl.section__dl
+      dt.section__dt Category：
+      dd.section__dd Style
     p getStyles() 方法用来设置或者获取初始化时配置的 attrs 信息的。
     h4.section__h4 Parameters
     h5.section__h4 prop
