--- a/api/pug/types/isCollection.pug
+++ b/api/pug/types/isCollection.pug
@@ -2,10 +2,10 @@ section.section
   header.section__header
     h3.section__h3 isCollection(el)
   div.section__content
-    p isCollection() 方法用来检测测试数据是否为 HTMLNodeList (元素集合)类型。
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Attributes
+      dd.section__dd Node Type Detection
+    p isCollection() 方法用来检测测试数据是否为 HTMLNodeList (元素集合)类型。
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
