--- a/api/pug/types/isDOM.pug
+++ b/api/pug/types/isDOM.pug
@@ -2,10 +2,10 @@ section.section
   header.section__header
     h3.section__h3 isDOM(el)
   div.section__content
-    p isDOM() 方法用来检测测试数据是否为 DOM 类型数据：DOM 节点，TextNode，NodeList 和 DocumentFragment）。
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Attributes
+      dd.section__dd Node Type Detection
+    p isDOM() 方法用来检测测试数据是否为 DOM 类型数据：DOM 节点，TextNode，NodeList 和 DocumentFragment）。
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
