--- a/api/pug/types/isElement.pug
+++ b/api/pug/types/isElement.pug
@@ -2,10 +2,10 @@ section.section
   header.section__header
     h3.section__h3 isElement(el)
   div.section__content
-    p isElement() 方法用来检测测试数据是否为 HTMLElement (元素节点)类型。
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Attributes
+      dd.section__dd Node Type Detection
+    p isElement() 方法用来检测测试数据是否为 HTMLElement (元素节点)类型。
     dl.section__dl
       dt.section__dt Category：
       dd.section__dd Lang
