--- a/api/pug/types/isFragment.pug
+++ b/api/pug/types/isFragment.pug
@@ -2,10 +2,10 @@ section.section
   header.section__header
     h3.section__h3 isFragment(el)
   div.section__content
-    p isFragment() 方法用来检测测试数据是否为 DocumentFragment 文档碎片。
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Attributes
+      dd.section__dd Node Type Detection
+    p isFragment() 方法用来检测测试数据是否为 DocumentFragment 文档碎片。
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
