--- a/api/pug/types/isText.pug
+++ b/api/pug/types/isText.pug
@@ -2,10 +2,10 @@ section.section
   header.section__header
     h3.section__h3 isText(el)
   div.section__content
-    p isText() 方法用来检测测试数据是否为 HTMLTextNode (文本节点)类型。
     dl.section__dl
       dt.section__dt Category：
-      dd.section__dd Attributes
+      dd.section__dd Node Type Detection
+    p isText() 方法用来检测测试数据是否为 HTMLTextNode (文本节点)类型。
     h4.section__h4 Parameters
     h5.section__h4 el
     dl.section__dl
